<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/currentBidder"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_bid_name_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/currentBidderName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_valid_bid_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/maxValidBid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/currentBidValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_bid_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/bidValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/playerBidValue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_bid_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/bidding"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/bidding_values" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/plus_one"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/plus_ten"
        android:layout_centerHorizontal="true"
        android:text="@string/plus_one_caption" />

    <Button
        android:id="@+id/plus_ten"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/done"
        android:layout_centerHorizontal="true"
        android:text="@string/plus_ten_caption" />

    <Button
        android:id="@+id/done"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pass"
        android:layout_centerHorizontal="true"
        android:text="@string/done_capion" />

    <Button
        android:id="@+id/pass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/pass_caption" />

</RelativeLayout>